Fixed layout issue for screen sizes creater than 1380px and Other small bug fixes.

--- a/web/app/themes/canard-child/assets/styles/base/_lists.scss
+++ b/web/app/themes/canard-child/assets/styles/base/_lists.scss
@@ -1,7 +1,6 @@
 ul,
 ol {
-  list-style-type: none;
-  margin: 0;
+  margin: 0 0 0.75em 0;
   padding: 0;
 
   &%default-ul {
